<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:padding="15dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:text="@string/our_products"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"

        />
    <SearchView
        android:id="@+id/search_bar"
        android:iconifiedByDefault="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search here"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangular_edittext"
        android:focusable="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_price"
        android:paddingTop="15dp"
        android:textColor="@color/colorBlack"
        />
    <com.crystal.crystalrangeseekbar.widgets.BubbleThumbRangeSeekbar
        android:id="@+id/price_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:min_value="0"
        app:max_value="4000"
        app:steps="1"
        app:bar_color="@color/colorOrange"
        app:bar_highlight_color="@color/colorOrange"
        app:left_thumb_image="@mipmap/thumb"
        app:right_thumb_image="@mipmap/thumb"
        app:left_thumb_image_pressed="@mipmap/thumb"
        app:right_thumb_image_pressed="@mipmap/thumb"
        app:data_type="_integer"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        >
        <TextView
            android:id="@+id/price_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter: Rs. 100 - Rs. 100"
            android:textColor="@color/colorBlack"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/filter_price_range_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FILTER"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/rectangular_green_btn"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
</androidx.core.widget.NestedScrollView>