<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ContactUsFragment"
    >



        <LinearLayout
            android:id="@+id/contact_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_marginTop="250dp"
            android:layout_marginHorizontal="20dp"
            android:padding="20dp"
            android:elevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/location_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/address"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/phone_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/phone_no"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/email_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/email"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/web_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/website"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.google.android.gms.maps.MapView
            android:id="@+id/location_map"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangular_edittext"
        android:hint="Name *"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_edittext"
            android:hint="Mail *"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_edittext"
            android:hint="Phone"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:inputType="phone"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_edittext"
            android:hint="Subject"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_edittext"
            android:hint="Messages"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:background="@drawable/rectangular_green_btn"
            android:text="Send Message"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>

    </LinearLayout>
</RelativeLayout>
</ScrollView>